# fastapi_template

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  db.py  main.py
tests/: test_main.py
